# LibPks

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
src/apps/: CMakeLists.txt  main.cpp
src/libpks/: CBindings.cpp  CMakeLists.txt  PksColor.cpp  PksDiceResult.cpp  PksDiceRoller.cpp  PksException.cpp  PksGame.cpp  PksGameBoard.cpp  PksGameBoard.h  PksGameState.cpp  PksLogUtils.cpp  PksPlayer.cpp  PksSnitchablePieces.cpp  PksSnitcher.cpp  PksUtils.cpp
src/libpks/include/: PksBoardState.h  PksColor.h  PksConstants.h  PksDiceResult.h  PksDiceRoller.h  PksException.h  PksGame.h  PksGameBoard.h  PksGameSnapshot.h  PksGameState.h  PksMoves.h  PksPlayer.h  PksRollDiceResult.h  PksSnitchablePieces.h  PksSnitcher.h  PksSpotType.h  PksTypeDefs.h  PksUtils.h
src/libpks/include/public/: LibPks.h  README.md
tests/: CMakeLists.txt  MockDiceRoller.h  test_convert_spot_numbers.cpp  test_dice_roller.cpp  test_game_over.cpp  test_piece_capture.cpp  test_piece_movement.cpp  test_snitch.cpp  test_snitch_capturing_moves.cpp  test_snitch_optimal_moves.cpp  test_snitch_possible_moves.cpp
tests/src/: TestBoards.cpp  TestBoards.h
